[gd_scene load_steps=8 format=3 uid="uid://pq8bo54x34mm"]

[ext_resource type="Script" path="res://Code/UI/pause_menu.gd" id="1_nlbrn"]
[ext_resource type="Texture2D" uid="uid://c6x7eqhiitv40" path="res://Textures/UI/Icons/small_tnd_icons_trash.png" id="2_0jg8v"]
[ext_resource type="PackedScene" uid="uid://1e7sj64j7npj" path="res://Scenes/UI/icons/pm_upgrade.tscn" id="2_nyvwf"]
[ext_resource type="Texture2D" uid="uid://bt4pcptl35vuq" path="res://Textures/UI/Icons/small_tnd_icons_debis.png" id="3_tn6yt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wjutr"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p4swg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v5bxe"]

[node name="pause_menu" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(640, 360)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_nlbrn")
pm_upgrade = ExtResource("2_nyvwf")
id = "pause_menu"

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(640, 360)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wjutr")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="main_hbx" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="spacer" type="Control" parent="PanelContainer/VBoxContainer/main_hbx"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="PanelContainer/VBoxContainer/main_hbx"]
layout_mode = 2
size_flags_horizontal = 3
current_tab = 0

[node name="Vessel" type="PanelContainer" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_p4swg")
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="spacer" type="Control" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="Control" type="HBoxContainer" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 8

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer/GridContainer/Control"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_0jg8v")

[node name="trash_cargo" type="Label" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer/GridContainer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "0/0"

[node name="Control2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_vertical = 0

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer/GridContainer/Control2"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_tn6yt")

[node name="debris_cargo" type="Label" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer/GridContainer/Control2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "0/0"

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Scoop Height:"

[node name="scoop_height" type="Label" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.896745, 0.447942, 0.39203, 1)
theme_override_font_sizes/font_size = 24
text = "0.0"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Scoop Length:"

[node name="scoop_length" type="Label" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.896745, 0.447942, 0.39203, 1)
theme_override_font_sizes/font_size = 24
text = "0.0"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Speed:"

[node name="speed" type="Label" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.896745, 0.447942, 0.39203, 1)
theme_override_font_sizes/font_size = 24
text = "0.0"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Battery Life:"

[node name="batt_life" type="Label" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.896745, 0.447942, 0.39203, 1)
theme_override_font_sizes/font_size = 24
text = "0.0"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Recharge Rate:"

[node name="recharge_rate" type="Label" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.896745, 0.447942, 0.39203, 1)
theme_override_font_sizes/font_size = 24
text = "0.0"
horizontal_alignment = 1

[node name="Label9" type="Label" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Depletion Rate:"

[node name="depletion_rate" type="Label" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.896745, 0.447942, 0.39203, 1)
theme_override_font_sizes/font_size = 24
text = "0.0"
horizontal_alignment = 1

[node name="Label11" type="Label" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Water Drag:"

[node name="damp" type="Label" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Vessel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.896745, 0.447942, 0.39203, 1)
theme_override_font_sizes/font_size = 24
text = "0.0"
horizontal_alignment = 1

[node name="Upgrades" type="PanelContainer" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_v5bxe")
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Upgrades"]
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="upgrades_grid" type="GridContainer" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Upgrades/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 6

[node name="Settings" type="PanelContainer" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="vbox" type="VBoxContainer" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Settings"]
layout_mode = 2

[node name="spacer" type="Control" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Settings/vbox"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Settings/vbox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Settings/vbox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "Volume:"

[node name="volume" type="HSlider" parent="PanelContainer/VBoxContainer/main_hbx/TabContainer/Settings/vbox/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.1
value = 0.5
tick_count = 11
ticks_on_borders = true

[node name="spacer2" type="Control" parent="PanelContainer/VBoxContainer/main_hbx"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="bottom_hbox" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 48)
layout_mode = 2
size_flags_horizontal = 8

[node name="pause_mm_btn" type="Button" parent="PanelContainer/VBoxContainer/bottom_hbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
size_flags_vertical = 4
text = "Main Menu"

[node name="pause_close_btn" type="Button" parent="PanelContainer/VBoxContainer/bottom_hbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
size_flags_vertical = 4
text = "Close"

[node name="spacer" type="Control" parent="PanelContainer/VBoxContainer/bottom_hbox"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
